product create form

--- a/src/pages/Product/index.scss
+++ b/src/pages/Product/index.scss
@@ -60,3 +60,18 @@
         }
     }
 }
+
+.product-table__cell {
+    width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    
+    display: -webkit-box;
+    line-clamp: 2;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
+.product-description {
+    text-align: justify;
+}
