--- a/src/components/ProductForm/index.scss
+++ b/src/components/ProductForm/index.scss
@@ -1,6 +1,6 @@
 @use "@styles/variables.scss" as *;
 
-.category-form {
+.product-form {
     height: 100%;
 
     &-wrapper {
@@ -14,12 +14,7 @@
         padding: 20px 10px;
         display: flex;
         flex-direction: column;
-        gap: 30px;
-
-        &__label {
-            color: $primary-color !important;
-            margin-bottom: 5px;
-        }
+        gap: 20px;
 
         &__loading {
             width: 100%;
@@ -27,6 +22,47 @@
             display: flex;
             align-items: center;
             justify-content: center;
+        }
+    }
+
+    &-control {
+        &__image {
+            flex-direction: row !important;
+            align-items: center;
+            gap: 20px;
+
+            &>label {
+                margin: 0;
+            }
+        }
+
+        &__label {
+            color: $primary-color !important;
+            margin-bottom: 5px;
+        }
+    }
+
+    &__upload-image__preview {
+        width: 100%;
+        height: 200px;
+        display: flex;
+        justify-content: center;
+        margin-top: 20px;
+        border-radius: 5px;
+        position: relative;
+
+        &>img {
+            width: 200px;
+            height: 200px;
+            object-fit: cover;
+            border-radius: 10px;
+        }
+
+        &>button {
+            position: absolute;
+            top: -8px;
+            right: 0;
+            cursor: pointer;
         }
     }
 
