--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,7 @@
 $primary-bg: #F5F6FA;
 $secondary-bg: #1E2538;
+$tertiary-bg: rgba(0, 0, 0, 0.039);
+$paper-bg: #fff;
 
 $primary-color: #1E2538;
 $secondary-color: #F5F6FA;
@@ -8,3 +10,5 @@ $focus-border-color: #1976d2;
 
 $sidebar-width: 250px;
 $appbar-heigh: 65px;
+
+$paper-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
