--- a/src/components/AddButton/index.scss
+++ b/src/components/AddButton/index.scss
@@ -1,5 +1,7 @@
+@use "@styles/variables.scss" as *;
+
 .add-icon-btn {
-    background-color: #0000000a !important;
+    background-color: $tertiary-bg !important;
     padding: 12px !important;
 
     &>svg {
