--- a/src/components/ProductForm/index.scss
+++ b/src/components/ProductForm/index.scss
@@ -7,6 +7,7 @@
         display: flex;
         flex-direction: column;
         height: 100%;
+        overflow-y: auto;
     }
 
     &__main-content {
