create and edit product

--- a/src/components/UploadBtn/index.scss
+++ b/src/components/UploadBtn/index.scss
@@ -1,6 +1,6 @@
 .upload-btn {
     flex: 1;
-    text-transform: capitalize !important;
+    text-transform: none !important;
 
     &>input {
         clip: rect(0 0 0 0);
