--- a/src/pages/Product/Details/index.scss
+++ b/src/pages/Product/Details/index.scss
@@ -2,8 +2,7 @@
 
 .product-detail {
     &__paper {
-        height: 90%;
-        min-width: 60% !important;
+        min-width: 960px !important;
     }
 
     &__title {
@@ -32,6 +31,63 @@
             display: flex;
             align-items: center;
             justify-content: center;
+        }
+
+        &__wrapper {
+            width: 100%;
+            height: 100%;
+        }
+
+        &__thumbnail {
+            width: 350px;
+            height: 350px;
+
+            &>img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                border-radius: 10px;
+            }
+        }
+
+        &__general {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+
+            &-name {
+                font-size: 24px !important;
+                font-weight: bold !important;
+                text-transform: capitalize;
+            }
+
+            &-description {
+                font-size: 16px;
+                max-height: 450px;
+                overflow: hidden;
+                text-align: justify;
+                display: -webkit-box;
+                line-clamp: 9;
+                -webkit-line-clamp: 9;
+                -webkit-box-orient: vertical;
+
+                &::first-letter {
+                    text-transform: uppercase;
+                }
+            }
+
+            &-info {
+                display: flex;
+                align-items: center;
+                gap: 10px;
+                font-size: 16px;
+
+                &>span {
+                    &:first-child {
+                        font-weight: 600;
+                    }
+                }
+            }
         }
     }
 }
